roles/aws_infra/files/cfn_gocd_server.yml
---
AWSTemplateFormatVersion: "2010-09-09"

Description:
  GoCD Server

# Parameters:

# Conditions:

Resources:
  Instance:
    Type: AWS::EC2::Instance
    Properties:
      IamInstanceProfile:
        Ref: InstanceProfile
      ImageId: ami-c481fad3
      InstanceType: t2.micro
      KeyName: devopslabs-us-east-1
      SecurityGroupIds:
        - Ref: SshSg
        - Ref: GocdServerSg
      SubnetId:
        Fn::ImportValue:
          !Sub "vpc-model-01-${AWS::Region}-SUBNET1ID"
      Tags:
        - Key: Name
          Value: gocd_server
        - Key: Environment
          Value: test
      Volumes:
        - Device: /dev/xvdf
          VolumeId:
            Ref: GocdVol
  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - ReadOnly
  SshSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allows TW network SSH
      VpcId:
        Fn::ImportValue:
          !Sub "vpc-model-01-${AWS::Region}-VPCID"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          ToPort: 22
          IpProtocol: tcp
  GocdServerSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allows TW network SSH
      VpcId:
        Fn::ImportValue:
          !Sub "vpc-model-01-${AWS::Region}-VPCID"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 8153
          ToPort: 8154
          IpProtocol: tcp
        - CidrIp: 0.0.0.0/0
          FromPort: 8153
          ToPort: 8154
          IpProtocol: tcp
  GocdVol:
    Type: AWS::EC2::Volume
    Properties:
      AvailabilityZone:
        Fn::ImportValue:
          !Sub "vpc-model-01-${AWS::Region}-SUBNET1AZ"
      Encrypted: true
      Size: 300
      Tags:
        - Key: Backup
          Value: true
      VolumeType: gp2

Outputs:
  InstanceId:
    Description: Instance ID
    Value:
      !Ref Instance
  AvailabilityZone:
    Description: Datacenter Location
    Value:
      !GetAtt Instance.AvailabilityZone
  PrivateDnsName:
    Description: Private DNS Name (known in the VPC only)
    Value:
      !GetAtt Instance.PrivateDnsName
  PrivateIp:
    Description: Internal IP address
    Value:
      !GetAtt Instance.PrivateIp
  Volume:
    Description: Where gocd stuff is
    Value:
      !Ref GocdVol
